style: main correction on overlay title and description as mobile was not in good shape; further small cosmetic; centralize webkit-scrollbar to central file

--- a/css/board.css
+++ b/css/board.css
@@ -252,6 +252,7 @@ body {
     border-color: #00BEE8;  
     transition: color 0.2s ease-in-out 0.1s,
     border-color 0.2s ease-in-out 0.1s;    
+    cursor: pointer;
 }
 
 .kanban__column {
