--- a/css/board_card.css
+++ b/css/board_card.css
@@ -84,6 +84,9 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis; 
+    hyphens: auto;
+    overflow-wrap: break-word; 
+    word-break: break-word;    
 }
 
 .card__header--description{
