--- a/css/board_edit_controls.css
+++ b/css/board_edit_controls.css
@@ -1,42 +1,3 @@
-.edit__textarea::-webkit-scrollbar,
-.overlay__edit--selections::-webkit-scrollbar {
-    width: 10px;
-}
-
-.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:decrement {
-    background-image: url('../assets/img/icon/triangle_upwards.svg');
-}
-
-.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:increment {
-    background-image: url('../assets/img/icon/triangle_downwards.svg');
-}
-
-.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:decrement,
-.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:increment {
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 10px;
-    height: 4px;
-}
-
-.edit__textarea::-webkit-scrollbar-thumb,
-.overlay__edit--selections::-webkit-scrollbar-thumb {
-    background-color: #A8A8A8;
-    border-radius: 8px;
-    border: 2px solid transparent;
-    background-clip: content-box;
-}
-
-.edit__textarea::-webkit-scrollbar-thumb:hover,
-.overlay__edit--selections::-webkit-scrollbar-thumb:hover {
-    background-color: #888888;
-}
-
-.edit__textarea::-webkit-scrollbar-track,
-.overlay__edit--selections::-webkit-scrollbar-track {
-    margin: 20px 0;
-}
-
 .edit__button-prio {
     display: flex;
     align-items: center;
