--- a/css/scrollbars.css
+++ b/css/scrollbars.css
@@ -10,7 +10,9 @@
 .edit__wrapper-list::-webkit-scrollbar,
 .edit__subtasklist::-webkit-scrollbar,
 .task__overlay-content::-webkit-scrollbar,
-.overlay__edit-selections::-webkit-scrollbar {
+.overlay__edit-selections::-webkit-scrollbar
+.edit__textarea::-webkit-scrollbar,
+.overlay__edit--selections::-webkit-scrollbar {
   width: 6px;
 }
 
@@ -42,3 +44,48 @@
 .overlay__edit-selections::-webkit-scrollbar-track {
   background-color: #ffffff00;
 }
+
+
+.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:decrement {
+    background-image: url('../assets/img/icon/triangle_upwards.svg');
+}
+
+.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:increment {
+    background-image: url('../assets/img/icon/triangle_downwards.svg');
+}
+
+.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:decrement,
+.overlay__edit--selections::-webkit-scrollbar-button:single-button:vertical:increment {
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 10px;
+    height: 4px;
+}
+
+.edit__textarea::-webkit-scrollbar-thumb,
+.overlay__edit--selections::-webkit-scrollbar-thumb {
+    background-color: #A8A8A8;
+    border-radius: 8px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+.edit__textarea::-webkit-scrollbar-thumb:hover,
+.overlay__edit--selections::-webkit-scrollbar-thumb:hover {
+    background-color: #888888;
+}
+
+.edit__textarea::-webkit-scrollbar-track,
+.overlay__edit--selections::-webkit-scrollbar-track {
+    margin: 20px 0;
+}
+
+@media (max-width: 556px) {
+  .kanban__grid-wrapper::-webkit-scrollbar,
+  .kanban__column::-webkit-scrollbar,
+  .overlay__content::-webkit-scrollbar,
+  .overlay__story::-webkit-scrollbar {
+    display: none;
+  }
+}
+    
